--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +8,45 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- MY STYLE -->
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
-    <title>FizzBuzz</title>
+    <!-- JS -->
+    <script src="js/script-email.js" defer></script>
+    <script src="js/script-dadi.js" defer></script>
+    <!-- INSERISCI IL TITOLO DEL PROGETTO-->
+    <title>Gioco dei dadi</title>
 </head>
 <body>
     <main class="container">
-        <header>
-            <h1>FizzBuzzDOM</h1>
-        </header>
-        <div id="number">
+        <div class="checked text-center mt-5">
+            <h2><b>REGISTRATI</b></h2>
+            <div class="row">
+                <div class="col-lg-6 d-flex flex-column align-items-center w-100">
+                    <label for="user-email">Registrati usando la tua email per procedere</label>
+                    <input type="email" id="user-email" placeholder="example@email.it" class="my-2">
+                    <button id="button" class="btn btn-primary">Invia</button>
+                </div>
+            </div>
+        </div>
+        <div class="text-center mt-5">
+            <h2><b>IL GIOCO DEI DADI</b></h2>
+            <button id="btn-dadi" class="btn btn-primary mt-3">GIOCA</button>
+        </div>
+        <div class="dadi text-center d-flex flex-column align-space-everly mt-5">
+            <div class="row mt-5">
+                <div class="col-6 d-flex flex-column align-items-center">
+                    <h4>RISULTATO DADO UTENTE</h4>
+                    <div id="numero-utente"></div>
+                </div>
+                <div class="col-6 d-flex flex-column align-items-center">
+                    <h4>RISULTATO DADO COMPUTER</h4>
+                    <div id="numero-cpu"></div>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col d-flex flex-column align-items-center">
+                    <h2><b>CHI SARA' IL VINCITORE?</b></h2>
+                    <div id="winner"></div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
